# HydraProject

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/game/: Entity.h  GameState.cpp  GameState.h  NPC.cpp  NPC.h  NetworkClient.cpp  NetworkClient.h  Player.cpp  Player.h  Quest.cpp  Quest.h  TaskManager.cpp  TaskManager.h  Vector3.h  World.cpp  World.h
src/shaders/: BasicMeshShader.h  TerrainShader.h
src/ui/: LoadingScreen.cpp  LoadingScreen.h  UIManager.cpp  UIManager.h
